feat: 对话隔离
